--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ header {
     display: flex;
     flex-flow: column;
     justify-content:space-between;
-    margin-top: 2%;
+    margin-top: 1%;
 }
 
 header h1 {
@@ -23,33 +23,38 @@ header h1 {
 
 nav {
     font-family: cursive;
-    font-size: 20px;
-    padding: 100px;
-    color: #774936;   
+    font-size: 30px;
+    padding: 80px;
+    color: #774936;  
+    justify-content: center;
 }
 
 nav li {
-    padding: 30px;
+    padding: 20px;
+    margin-left: 30px;
     color: #774936;
 }
 
 .avatar {
     position: absolute;
-    top: 170px;
-    right: 100px;
-    border-style: 30px solid;
-    border-color: #774936;
+    top: 150px;
+    right: 120px;
+    width: 30%;
+}
 
-    
-    
+header h2 {
+    font-size: 30px;
+    font-family: cursive;
+    color:#394828;
+    text-align: center;
+    padding: 30px;
 }
 
 .Box-1 {
-    border: 1px #9d6b53;
-    padding: 10px;
+    padding: 50px;
     background-color: #9d6b53;
-    color: #edc4b3;
     flex-direction: column;
+    max-width:100%
 }
 
 .Box-1 h2 {
@@ -59,15 +64,23 @@ nav li {
 .Box-1 h2, p {
     background-color: #9d6b53;
     font-family: cursive;
+    color: pink;
 }
 
 .Box-1 p {
     font-size: 20px;
+    max-width:50%
 }
 
 .img-1 {
-    display: flex;
-    max-width: 20%;
-    max-height: 400px;
-    
+    position: absolute;
+    right:100px;
+    top: 650px
+}
+
+.Box-2 {
+    padding: 30px;
+    background-color:#545e56;
+    display:flex;
+    flex-direction: column;
 }
